--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.15.2",
     "bootstrap": "^3.3.7",
+    "brewerydb-node": "0.0.1",
     "react": "^15.4.0",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.0",
